# so101_ws

./: .dockerignore  CLAUDE.md  Dockerfile.moveit  MEMORY.md  README.md  docker-compose.moveit.yml  docker-compose.yml  papu_ros2.json  run.sh  run_moveit.sh
docker/: ros_entrypoint.sh
so101_bringup/config/cameras/: so101_cameras_realsense.yaml  so101_realsense2.yaml
so101_bringup/launch/: follower_moveit_demo.launch.py  follower_split.launch.py  pick_and_place.launch.py  pick_and_place_servo.launch.py
so101_kinematics/so101_kinematics/: cartesian_motion_node.py
so101_moveit_config/: CMakeLists.txt
so101_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_py_config.yaml  pick_and_place.yaml  sensors_3d.yaml  sensors_3d.yaml.disabled  so101_arm.srdf
so101_moveit_config/scripts/: gaze_servo.py  sort_by_class.py  sort_by_class_servo.py  track_and_pick.py
so101_perception/: README.md  hsv_calibrator_standalone.py  package.xml  setup.py
so101_perception/config/: aruco.yaml  blue_detector_params.yaml  objects_hsv.yaml  realsense_d435.yaml  zones_hsv.yaml
so101_perception/launch/: blue_detector.launch.py  hsv_calibration.launch.py  perception_classifier.launch.py  perception_with_robot.launch.py  zone_detector.launch.py
so101_perception/rviz/: blue_detector.rviz  perception_with_robot.rviz
so101_perception/so101_perception/: aruco_localizer.py  blue_object_detector.py  hsv_calibrator.py  mount_calibrator.py  object_classifier.py  test_zone_detection.py  zone_detector.py
