<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_perception</name>
  <version>0.1.0</version>
  <description>
    Vision system for the SO-101 robot arm.
    Detects coloured objects (default: blue) with the RealSense D435
    depth camera and publishes their 3-D position as RViz markers.
  </description>
  <maintainer email="h.tovarm07@gmail.com">Hector Tovar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_py</depend>

  <!-- Runtime camera driver -->
  <exec_depend>realsense2_camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
